--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Management System</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,19 +13,17 @@
   <body>
     <div class="container">
       <header>
-        <h1><i class="fas fa-user-graduate"></i>Student Management System</h1>
-        <p class="subtitle">
-          Manage your students easily - Add, View, Update, Delete
-        </p>
+        <h1><i class="fas fa-user-graduate"></i> Student Management System</h1>
+        <p class="subtitle">Manage Your Students Easily</p>
       </header>
 
       <main>
-        <!-- Add student Form -->
+        <!-- Add Student Form -->
         <section class="form-section">
           <h2><i class="fas fa-plus-circle"></i> Add New Student</h2>
           <form id="studentForm">
             <div class="form-group">
-              <label for="name"><i class="fas fa-user"></i>Full Name:</label>
+              <label for="name"><i class="fas fa-user"></i> Full Name:</label>
               <input
                 type="text"
                 id="name"
@@ -33,8 +31,9 @@
                 required
               />
             </div>
+
             <div class="form-group">
-              <label for="age"><i class="fas fa-birthday-cake"></i>Age:</label>
+              <label for="age"><i class="fas fa-birthday-cake"></i> Age:</label>
               <input
                 type="number"
                 id="age"
@@ -44,8 +43,9 @@
                 required
               />
             </div>
+
             <div class="form-group">
-              <label for="course"><i class="fas fa-book"></i>Course:</label>
+              <label for="course"><i class="fas fa-book"></i> Course:</label>
               <select id="course" required>
                 <option value="">Select course</option>
                 <option value="Computer Science">Computer Science</option>
@@ -67,11 +67,11 @@
             </button>
             <button
               type="button"
-              id="updtaeBtn"
+              id="updateBtn"
               class="btn btn-secondary"
               style="display: none"
             >
-              <i class="fas fa-save"></i>Update student
+              <i class="fas fa-save"></i> Update Student
             </button>
             <button
               type="button"
@@ -79,12 +79,12 @@
               class="btn btn-cancel"
               style="display: none"
             >
-              <i class="fas fa-times"></i>Cancel
+              <i class="fas fa-times"></i> Cancel
             </button>
           </form>
         </section>
 
-        <!-- Student List -->
+        <!-- Students List -->
         <section class="list-section">
           <h2><i class="fas fa-list"></i> Student List</h2>
           <div class="controls">
@@ -97,7 +97,7 @@
               />
             </div>
             <button id="refreshBtn" class="btn btn-refresh">
-              <i class="fas fa-sync-alt"></i>Refresh
+              <i class="fas fa-sync-alt"></i> Refresh
             </button>
           </div>
 
@@ -113,7 +113,7 @@
                 </tr>
               </thead>
               <tbody id="studentTable">
-                <!-- Student rows will loaded here-->
+                <!-- Students will be loaded here -->
                 <tr>
                   <td colspan="5" class="loading">Loading students...</td>
                 </tr>
@@ -123,7 +123,7 @@
 
           <div class="stats">
             <p>
-              <i class="fas fa-users"></i>Total students:
+              <i class="fas fa-users"></i> Total Students:
               <span id="totalStudents">0</span>
             </p>
           </div>
@@ -131,29 +131,28 @@
       </main>
 
       <footer>
-        <p>Student Management System &copy; 2023 | All rights reserved.</p>
+        <p>
+          Student Management System &copy; 2023 | Level 1: REST API with
+          Express.js
+        </p>
       </footer>
     </div>
 
     <!-- Confirmation Modal -->
     <div id="deleteModal" class="modal">
-      <div>
-        <div class="modal-content">
-          <h3><i class="fas fa-exclamation-triangle"></i>Confirm Delete</h3>
-          <p>
-            Are you sure you want to delete this student
-            <span id="deleteStudentName"></span>?
-          </p>
-          <div class="modal-actions">
-            <button id="confirmDelete" class="btn btn-danger">
-              Yes, Delete
-            </button>
-
-            <button id="cancelDelete" class="btn btn-secondary">Cancel</button>
-          </div>
+      <div class="modal-content">
+        <h3><i class="fas fa-exclamation-triangle"></i> Confirm Delete</h3>
+        <p>
+          Are you sure you want to delete student
+          <span id="deleteStudentName"></span>?
+        </p>
+        <div class="modal-actions">
+          <button id="confirmDelete" class="btn btn-danger">Yes, Delete</button>
+          <button id="cancelDelete" class="btn btn-secondary">Cancel</button>
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
