Update the Footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,10 +131,7 @@
       </main>
 
       <footer>
-        <p>
-          Student Management System &copy; 2023 | Level 1: REST API with
-          Express.js
-        </p>
+        <p>&copy; 2026 Student Management System. All rights reserved.</p>
       </footer>
     </div>
 
